# acclerated-odes-examples

./: CMakeLists.txt  README.md
kinetics/: CMakeLists.txt  README.md  main.cpp  main.cu
